2007-11-05  Henrik Sandklef  <hesa@sandklef.com>

	* doc/xnee_faq.texi: 
	xnee-bug => bug-xnee

2007-10-31  Henrik Sandklef  <hesa@sandklef.com>

	* doc/xnee_install.texi: 
	Added note on how to configure after CVS checkout
	xnee-3.02 used in examples instead of Xnee-1.0

	* build/cvs_build.sh (LOG_FILE): 
	Added configure options to enable build form CVS

	* cnee/src/Makefile.am (cnee.info): 
	Reintroduced rules for generating .texinfo, .1, .info

	* configure.in: 
	Version set to 3.02.80

	* Makefile.cvs (generate): 
	Added note on how to configure after CVS checkout

2007-10-30  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 
	Not using libxnee/test anymore

	* cnee/src/Makefile.am: 
	cnee.1, infopage, textinfo page not generated by default

	* libxnee/Makefile.am: 
	Removing test dir from SUBDIRS

	* libxnee/src/Makefile.am: 
	Removing .a lib, switch to libtool completed

	* libxnee/Makefile.am (SUBDIRS): 
	excluding test dir temporarily

2007-10-29  Henrik Sandklef  <hesa@sandklef.com>

	* doc/Makefile.am (docdir): 
	DOC_DEP is used for dependency doc code
	DOC_DEP and doc_DATA depends on build type (BUILDDOC)
	install rule added to override default
	
	* libxnee/src/xnee_replay.c (xnee_replay_main_loop): 
	insert break in replay loop if type in event is zero

	* configure.in: 
	updated version to 3.02
	DOC_DIR always set
	add printout to show if dynamic or static linking will be made

	* doc/xnee_faq.texi: 
	changed question email address to xnee-devel@gnu.org

2007-10-29  Henrik Sandklef  <hesa@gnu.org>

	* configure.in: 
	
	builddoc=false by default
	
2007-09-24  Henrik Sandklef  <hesa@gnu.org>

	* libxnee/src/print.c (xnee_print_xnee_settings): 

	#-printing synchronised replay option in session file

2007-09-15  Henrik Sandklef  <hesa@gnu.org>

	* cnee/src/Makefile.am: 
	* libxnee/test/Makefile.am:

	Removed dependency to static lib

2007-09-12  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 

	Docs not built by default