@@ -126,6 +126,7 @@ enum XNEE_OPTION_KEYS
     XNEE_SYNC_MODE_KEY        ,
     XNEE_RECALL_WINDOW_POS_KEY,
     XNEE_REPLAY_OFFSET_KEY    ,
+    XNEE_KEEP_AUTOREPEAT      ,
     XNEE_HUMAN_PRINTOUT_KEY   ,
     XNEE_LOOPS_KEY            ,
     XNEE_FORCE_REPLAY_KEY     ,
