@@ -1,3 +1,15 @@
+2007-11-05  Henrik Sandklef  <hesa@gnu.org>
+	* include/libxnee/print.h
+	* include/libxnee/xnee.h
+	* include/libxnee/xnee_resource.h
+	* include/libxnee/xnee_setget.h
+	* src/xnee_expr.c
+	* src/xnee_replay.c
+	* src/xnee_resource.c
+	* src/xnee_session.c
+	* src/xnee_setget.c
+	Adding keep-autorepeat option
+	
 2007-11-05  Henrik Sandklef  <hesa@sandklef.com>
 
 	* doc/xnee_faq.texi: 
